# OSQAr

./: .buildinfo  .gitignore  01_requirements.html  02_architecture.html  03_verification.html  04_implementation.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  conf.py  genindex.html  index.html  index.md  index.rst  needs.json  objects.inv  osqar  osqar.cmd  osqar.ps1  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/docs/: cli_reference.doctree  collaboration_workflows.doctree  configuration_and_hooks.doctree  integrators_guide.doctree  lifecycle_management.doctree  multi_project_workflows.doctree  project_setup_from_scratch.doctree  suppliers_guide.doctree  using_the_boilerplate.doctree
.doctrees/examples/: index.doctree
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gh-pages.yml  pages-deploy.yml  release.yml
_sources/: 01_requirements.rst.txt  index.rst.txt
_sources/docs/: cli_reference.rst.txt  collaboration_workflows.rst.txt  configuration_and_hooks.rst.txt  integrators_guide.rst.txt  lifecycle_management.rst.txt  multi_project_workflows.rst.txt  project_setup_from_scratch.rst.txt  suppliers_guide.rst.txt  using_the_boilerplate.rst.txt
_sources/examples/: index.rst.txt
_static/: custom.css  furo-fixes.css
ci/: assemble_framework_bundle.py
docs/: BOILERPLATE_USAGE.md  cli_reference.html  cli_reference.rst  collaboration_workflows.html  collaboration_workflows.rst  configuration_and_hooks.html  configuration_and_hooks.rst  integrators_guide.html  integrators_guide.rst  lifecycle_management.html  lifecycle_management.rst  multi_project_workflows.html  multi_project_workflows.rst  project_setup_from_scratch.html  project_setup_from_scratch.rst  suppliers_guide.html  suppliers_guide.rst  using_the_boilerplate.html  using_the_boilerplate.rst
example/: .buildinfo  01_requirements.html  02_architecture.html  03_verification.html  04_implementation.html  05_test_results.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
example/.doctrees/: 01_requirements.doctree  02_architecture.doctree  03_verification.doctree  05_test_results.doctree  environment.pickle  index.doctree
example/_sources/: 01_requirements.rst.txt  03_verification.rst.txt  index.rst.txt
examples/: index.html  index.rst
examples/c/: .buildinfo  01_requirements.html  02_architecture.html  03_verification.html  04_implementation.html  05_test_results.html  06_lifecycle_management.html  SHA256SUMS  complexity_report.txt  coverage.xml  coverage_report.txt  genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js  test_results.xml
examples/c/implementation/: CMakeLists.txt
examples/c/implementation/src/: tsim.c
examples/c_hello_world/: 03_verification.rst  04_implementation.rst  05_test_results.rst  06_lifecycle_management.rst  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  bazel-build-and-test.sh  build-and-test.sh  conf.py  osqar_project.json
examples/c_hello_world/_static/: custom.css
examples/c_hello_world/tests/: test_tsim.c
examples/c_shared_lib/: .bazelrc  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  bazel-build-and-test.sh  build-and-test.sh  conf.py  index.rst  osqar_project.json
examples/c_shared_lib/_static/: custom.css
examples/c_shared_lib/include/: osqar_shared.h
examples/c_shared_lib/src/: osqar_shared.c
examples/c_shared_lib/tests/: test_osqar_shared.c
examples/cpp/: .buildinfo  01_requirements.html  02_architecture.html  03_verification.html  04_implementation.html  05_test_results.html  06_lifecycle_management.html  SHA256SUMS  complexity_report.txt  coverage.xml  coverage_report.txt  genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js  test_results.xml
examples/cpp/implementation/: CMakeLists.txt
examples/cpp/implementation/include/: tsim.hpp
examples/cpp/implementation/src/: tsim.cpp
examples/cpp_hello_world/: .bazelrc  02_architecture.rst  04_implementation.rst  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  bazel-build-and-test.sh  build-and-test.sh  conf.py  index.rst  osqar_project.json
examples/cpp_hello_world/diagrams/: 04_traceability_matrix.puml
examples/cpp_hello_world/osqar_tools/: reproducible_build_env.sh
examples/cpp_hello_world/src/: tsim.cpp
examples/cpp_hello_world/tests/: test_tsim.cpp
examples/hello_world/: 02_architecture.rst  04_implementation.rst  05_test_results.rst  EXAMPLE_OVERVIEW.md  LINKED_TRACEABILITY_GUIDE.md  README.md  TEST_IMPORT_SUMMARY.md  TEST_TRACEABILITY_GUIDE.md  build-and-test.sh  conf.py  index.rst  test_results.xml
examples/python/: .buildinfo  01_requirements.html  02_architecture.html  03_verification.html  04_implementation.html  05_test_results.html  06_lifecycle_management.html  (+12 more)
examples/rust_hello_world/: .bazelrc  04_implementation.rst  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  bazel-build-and-test.sh  build-and-test.sh  build.rs  conf.py  index.rst  osqar_project.json
examples/rust_hello_world/_static/: custom.css
examples/rust_hello_world/diagrams/: 01_component_architecture.puml
examples/rust_hello_world/src/: lib.rs
osqar_data/: __init__.py
osqar_data/templates/basic/cpp/: 04_implementation.html  CMakeLists.txt  README.md  index.html  index.rst
templates/basic/shared/: 02_architecture.rst  03_verification.rst  04_implementation.rst  build-and-test.sh  osqar_project.json  pyproject.toml
tests/: test_cli_smoke.py
tools/: __init__.py  code_trace_check.py  fix_rst_title_underlines.py  generate_checksums.py  install_git_hooks.py  osqar_cli.py  osqar_cli_util.py  osqar_cmd_checksum.py  osqar_cmd_code_trace.py  osqar_cmd_doctor.py  osqar_cmd_framework.py  osqar_cmd_new.py  osqar_cmd_open_docs.py  osqar_cmd_setup.py  osqar_cmd_shipment.py  osqar_cmd_traceability.py  osqar_cmd_workspace.py  reproducible_build_env.sh  traceability_check.py
(+181 files in other folders)
