[tool.poetry]
name = "osqar"
version = "0.3.1"
description = "Open Safety Qualification Architecture - A Sphinx-Needs boilerplate for safety-related systems."
authors = ["Jan Toennemann <jan@toennemann.net>"]
readme = "README.md"
package-mode = false
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
# Core Documentation Tools
Sphinx = "7.2.*"
sphinx-needs = "^2.0"  # The engine for requirements & traceability
sphinx-test-reports = "^1.0" # To import JUnit/TRF test results into Sphinx
sphinxcontrib-plantuml = "^0.25" # For architecture diagrams

# Theme
furo = "^2024.8.6"

[tool.poetry.group.dev.dependencies]
# Tools for maintaining the boilerplate itself
pytest = "^7.4"
black = "^23.7"

[tool.poetry.group.evidence]
optional = true

[tool.poetry.group.evidence.dependencies]
# Optional tools for generating extra evidence artifacts (coverage/complexity).
# The examples/scripts fall back gracefully when these are not installed.
lizard = "^1.17.10"
pytest-cov = "^7.0.0"
gcovr = "^7.2"

[tool.poetry.group.ide]
optional = true

[tool.poetry.group.ide.dependencies]
# Optional LSP server for Sphinx projects (VS Code).
esbonio = "^0.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"