[project]
name = "osqar"
version = "0.4.1"
description = "Open Safety Qualification Architecture - A Sphinx-Needs boilerplate for safety-related systems."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
	{ name = "Jan Toennemann", email = "jan@toennemann.net" },
]
requires-python = ">=3.9,<3.14"
dependencies = [
	"Sphinx==7.2.*",
	"sphinx-needs>=2.0",
	"sphinx-test-reports>=1.0",
	"sphinxcontrib-plantuml>=0.25",
	"furo>=2024.8.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
# Tools for maintaining the boilerplate itself
pytest = "^7.4"
black = "^23.7"

[tool.poetry.group.evidence]
optional = true

[tool.poetry.group.evidence.dependencies]
# Optional tools for generating extra evidence artifacts (coverage/complexity).
# The examples/scripts fall back gracefully when these are not installed.
lizard = "^1.17.10"
pytest-cov = "^7.0.0"
gcovr = "^7.2"

[tool.poetry.group.ide]
optional = true

[tool.poetry.group.ide.dependencies]
# Optional LSP server for Sphinx projects (VS Code).
esbonio = "^0.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"