[project]
name = "osqar"
version = "0.5.4"
description = "Open Safety Qualification Architecture - A Sphinx-Needs boilerplate for safety-related systems."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
	{ name = "Jan Toennemann", email = "jan@toennemann.net" },
]
requires-python = ">=3.9,<3.15"
dependencies = [
	"Sphinx==7.2.*",
	"roman>=4.2",
	"sphinx-needs>=2.0",
	"sphinx-test-reports>=1.0",
	"sphinxcontrib-plantuml>=0.25",
	"furo>=2024.8.6",
]

[project.scripts]
osqar = "tools.osqar_cli:main"

[tool.poetry]
package-mode = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "osqar_data*"]

[tool.setuptools.package-data]
osqar_data = ["templates/**", "static/**"]

[tool.poetry.group.dev.dependencies]
# Tools for maintaining the boilerplate itself
pytest = "^7.4"
black = "^23.7"

[tool.pytest.ini_options]
addopts = [
	"-ra",
	"--ignore=_build",
	"--ignore=examples",
	"--ignore=templates",
]

[tool.poetry.group.evidence]
optional = true

[tool.poetry.group.evidence.dependencies]
# Optional tools for generating extra evidence artifacts (coverage/complexity).
# The examples/scripts fall back gracefully when these are not installed.
lizard = "^1.17.10"
pytest-cov = "^7.0.0"
gcovr = "^7.2"

[tool.poetry.group.ide]
optional = true

[tool.poetry.group.ide.dependencies]
# Optional LSP server for Sphinx projects (VS Code).
esbonio = "^0.16"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"