module(
    name = "osqar_c_hello_world",
    version = "0.0.0",
)

# Bazel 9+ no longer autoloads built-in C/C++ rules; load them from rules_cc.
# Keep this in sync with Bazel's resolved dependency graph to avoid
# --check_direct_dependencies warnings in CI.
bazel_dep(name = "rules_cc", version = "0.2.14")

bazel_dep(name = "osqar_c_shared_lib", version = "0.0.0")
local_path_override(
    module_name = "osqar_c_shared_lib",
    path = "../c_shared_lib",
)
