load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "osqar_shared",
    srcs = ["src/osqar_shared.c"],
    hdrs = ["include/osqar_shared.h"],
    includes = ["include"],
    copts = ["-std=c11"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "junit_tests",
    srcs = ["tests/test_osqar_shared.c"],
    deps = [":osqar_shared"],
    copts = ["-std=c11"],
)
