module(
    name = "osqar_cpp_hello_world",
    version = "0.0.0",
)

# Bazel 9+ no longer autoloads built-in C/C++ rules; load them from rules_cc.
# Keep this in sync with Bazel's resolved dependency graph to avoid
# --check_direct_dependencies warnings in CI.
bazel_dep(name = "rules_cc", version = "0.2.14")
